Fri Jun 25 10:51:26 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* CIDLC/ServantHeaderGenerator.cpp:
	* CIDLC/ServantSourceGenerator.cpp:

	  Fixed compilation problems with VC6. To put it short VC6 just
	  cannot handle templates properly. Thanks to gan Deng for reporting
	  the problem.

Thu Jun 24 17:25:36 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/ciao/NodeApplication_Impl.cpp:

          Added ACE_TRY clock to the code.

Thu Jun 24 17:13:20 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* CIDLC/ServantHeaderGenerator.cpp:
	* CIDLC/ServantSourceGenerator.cpp:

	  Reverted changes to

	  "Fri Jun  4 18:16:47 2004  Jeff Parsons
	  <j.parsons@vanderbilt.edu>"  to get things going on VC6 builds.

	  Added changes to ensure that there is a gap between "<" brackets
	  for templates and the scoping operator "::" Thanks to Ed
	  Mulholland for reporting the problem.

	* DnC/ciao/Servant_Impl_T.cpp:
	* DnC/ciao/Servant_Impl_T.h:
	* ciao/Servant_Impl_T.cpp:
	* ciao/Servant_Impl_T.h:

	  Do not use traits as template parameters. VC6 cannot just handle
	  all this. Thanks to Theckla Louchios <theckla.louchios@lmco.com>
	  for reporting the problem.

Thu Jun 24 16:40:53 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* DnC/RepositoryManager/RepositoryManager.mpc:
	* DnC/RepositoryManager/Repository_Manager.cpp:
	  Some more changes for VC6.

Thu Jun 24 15:34:53 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* CIAOTAO.mwc
	  Reversed the change to avoid trouble for people who don't use
	  the new DnC framework.

Thu Jun 24 15:17:45 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* DnC/Config_Handlers/Config_Handlers.mpc
	* DnC/Config_Handlers/DnC_Dump.cpp
	* DnC/Config_Handlers/DnC_Dump.h
	* DnC/Config_Handlers/Process_Element.tpp
	* DnC/Config_Handlers/Utils.cpp
	* DnC/Config_Handlers/XercesString.cpp
	* DnC/DomainApplicationManager/DomainApplicationManager.mpc
	* DnC/DomainApplicationManager/DomainApplicationManager_Impl.cpp